--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,10 +1,17 @@
 <div class="row">
 	<div class="col-lg-6 col-lg-offset-3">
+		{{partial 'partials/todo-form'}}
 		<h2><b>To Dos</b></h2>
 		<ul>
-			{{#each todo in todos}}
-				<li>{{todo.task}}</li>
-				<li>{{todo.completed}}</li>
+			{{#each todo in model}}
+				<li>
+				{{todo.task}}
+				{{#if todo.completed}}
+					<b>completed</b>
+				{{else}}
+					<b>pending</b>
+				{{/if}}
+				</li>
 			{{/each}}
 		</ul>
 	</div>
