--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -10,12 +10,9 @@
 							{{#if todo.isEditing}}
 								{{partial 'partials/edit-todo'}}
 							{{else}}
-							<h4>
-								{{#if todo.model.completed}}
-									<strike>{{todo.model.task}}</strike>
-								{{else}}
-									{{todo.model.task}}
-								{{/if}}
+							<h4 {{bind-attr class="todo.completed:strike"}}>
+								{{input type="checkbox" checked=todo.completed class="toggle"}}
+								{{todo.model.task}}
 								<div class="actions">
 									<a {{action 'editTodo'}} href class="edit-todo">
 										<span class="glyphicon glyphicon-pencil"></span>
