change to https

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -1,5 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=Quicksand);
-@import url(http://fonts.googleapis.com/css?family=Quicksand:700);
+@import url(https://fonts.googleapis.com/css?family=Quicksand);
+@import url(https://fonts.googleapis.com/css?family=Quicksand:700);
 
 body {
 	font-family: 'Quicksand', sans-serif;
