--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,34 +1,15 @@
 <div class="row">
 	<div class="col-lg-6 col-lg-offset-3">
-		{{partial 'partials/todo-form'}}
 		<div class="row">
-			<div class="col-xs-10">
-				<h2><b>To Dos</b></h2>
-				<ul id="todos">
-					{{#each todo in model itemController='todo'}}
-						<li>
-							{{#if todo.isEditing}}
-								{{partial 'partials/edit-todo'}}
-							{{else}}
-								<h4 {{bind-attr class="todo.completed:strike"}}>
-									{{input type="checkbox" checked=todo.completed class="toggle"}}
-									{{todo.model.task}}
-									<div class="actions">
-										<a {{action 'editTodo'}} href class="edit-todo">
-											<span class="glyphicon glyphicon-pencil"></span>
-										</a>
-										<a {{action 'removeTodo' todo}} href class="remove-todo">
-											<span class="glyphicon glyphicon-remove"></span>
-										</a>
-									</div>
-								</h4>
-							{{/if}}
-						</li>
-					{{else}}
-						<h4>No Tasks to do</h4>
-					{{/each}}
-				</ul>
-			</div>
+			<h2><b>Todo0</b></h2>
+			<h5>A Todo app built using Ember.js and Firebase.</h5> 
+			<h5>Checkout source on <a href="https://github.com/sudharti/todo0">Github</a> and the <a href="#">Blog post</a></h5><hr>
+		</div>
+		<div class="row">
+			<h4><b>Add new task</b></h4>
+			{{partial 'partials/todo-form'}}
+			<br>
+			{{partial 'partials/todos'}}
 		</div>
 	</div>
 </div>
