--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -3,7 +3,7 @@
     <div class="row">
       <h2><b>Todo0</b></h2>
       <h5>A Todo app built using Ember.js and Firebase.</h5> 
-      <h5>Checkout source on <a href="https://github.com/sudharti/todo0">Github</a> and the <a href="#">Blog post</a></h5><hr>
+      <h5>Checkout source on <a href="https://github.com/sudharti/todo0">Github</a> and the <a href="http://sudharti.github.io/articles/ember-todo-firebase/">Blog post</a></h5><hr>
     </div>
     <div class="row">
       <h4><b>Add new task</b></h4>
